--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
-							<version>1.18.30</version> <!-- Укажите версию Lombok -->
+							<version>1.18.30</version>
 						</path>
 					</annotationProcessorPaths>
 					<source>23</source>
@@ -95,7 +95,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>3.1.5</version> <!-- Укажите версию Spring Boot -->
+				<version>3.1.5</version>
 				<configuration>
 					<excludes>
 						<exclude>
