--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-# Database configurations
-spring.datasource.url=jdbc:mysql://localhost:3306/social_network?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=JARgal2005!
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# Hibernate and JPA configurations
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+## Database configurations
+#spring.datasource.url=jdbc:mysql://localhost:3306/social_network?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=JARgal2005!
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+## Hibernate and JPA configurations
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
